Name:                transalign
Version:             0.1
Synopsis:            Annotate genes by transitive alignment
Description:         
Homepage:            
License:             GPL
Author:              Ketil Malde
Maintainer:          ketil@malde.org
Stability:           Experimental
Category:            Bioinformatics
Build-type:          Simple
Cabal-version:       >=1.9.2

Executable transalign
   Main-Is:        TransAlign.hs
   Other-modules:  Align, Blast, BlastCache
   Hs-Source-Dirs: src
   Build-Depends:  base >= 3, containers >= 0.5, blastxml >= 0.3, bytestring >= 0.9, binary, directory, deepseq, cmdargs, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers
   Ghc-Options:  -rtsopts -threaded -Odph -fllvm -optlo-O3 -fno-liberate-case -funfolding-use-threshold100 -funfolding-keeness-factor100

Executable blastextract
   Main-Is:        BlastExtract.hs
   Other-modules:  Align, Blast, BlastCache
   Hs-Source-Dirs: src
   Build-Depends:  base >= 3, blastxml >= 0.3, containers >= 0.5, bytestring >= 0.9, binary, directory, deepseq, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers
   Ghc-Options:  -rtsopts -threaded

Executable showcache
   Main-Is:        ShowCache.hs
   Other-modules:  Align, Blast, BlastCache
   Hs-Source-Dirs: src
   Build-Depends:  base >= 3, blastxml >= 0.3, containers >= 0.5, bytestring >= 0.9, binary, directory, filepath, deepseq, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers
   Ghc-Options:  -rtsopts -threaded

Executable transalign_prof
   Main-Is:        TransAlign.hs
   Other-modules:  Align, Blast, BlastCache
   Hs-Source-Dirs: src
   Build-Depends:  base >= 3, containers >= 0.5, blastxml >= 0.3, bytestring >= 0.9, binary, directory, deepseq, cmdargs, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers
   Ghc-Options:  -prof -fprof-auto-top -rtsopts -threaded -rtsopts -Odph -fllvm -optlo-O3 -fno-liberate-case -funfolding-use-threshold100 -funfolding-keeness-factor100
