Name:                transalign
Version:             0.1
Synopsis:            Annotate genes by transitive alignment
Description:         
Homepage:            
License:             GPL
Author:              Ketil Malde
Maintainer:          ketil@malde.org
Stability:           Experimental
Category:            Bioinformatics
Build-type:          Simple
Cabal-version:       >=1.10.0

Executable transalign
   Main-Is:        TransAlign.hs
   Other-modules:  Align, Blast, BlastCache, Options, Output
   Hs-Source-Dirs: src
   Build-Depends:  base >= 3, containers >= 0.5, blastxml >= 0.3, bytestring >= 0.9, binary, directory, deepseq, cmdargs, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers, judy == 0.2.3, filemanip >= 0.3, cassava >= 0.4.5.0, attoparsec >= 0.13.0
   Ghc-Options:  -rtsopts -threaded -Odph -fno-liberate-case -funfolding-use-threshold100 -funfolding-keeness-factor100 -feager-blackholing

Executable blastextract
   Main-Is:        BlastExtract.hs
   Other-modules:  Align, Blast, BlastCache
   Hs-Source-Dirs: src
   Build-Depends:  base >= 3, blastxml >= 0.3, containers >= 0.5, bytestring >= 0.9, binary, directory, deepseq, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers, judy == 0.2.3, filemanip >= 0.3,  cassava >= 0.4.5.0, attoparsec >= 0.13.0
   Ghc-Options:  -rtsopts -threaded -feager-blackholing

Executable showcache
   Main-Is:        ShowCache.hs
   Other-modules:  Align, Blast, BlastCache, Output
   Hs-Source-Dirs: src
   Build-Depends:  base >= 3, blastxml >= 0.3, containers >= 0.5, bytestring >= 0.9, binary, directory, filepath, deepseq, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers, judy == 0.2.3, filemanip >= 0.3,  cassava >= 0.4.5.0
   Ghc-Options:  -rtsopts -threaded -feager-blackholing

--Executable transalign_prof
--   Main-Is:        TransAlign.hs
--   Other-modules:  Align, Blast, BlastCache, Output, Options
--   Hs-Source-Dirs: src
--   Build-Depends:  base >= 3, containers >= 0.5, blastxml >= 0.3, bytestring >= 0.9, binary, directory, deepseq, cmdargs, biocore, vector, vector-th-unbox, template-haskell >= 2.5, vector-algorithms >= 0.6, parallel, hashable, unordered-containers, judy == 0.2.3, filemanip >= 0.3,  cassava >= 0.4.5.0
--   Ghc-Options:  -prof -fprof-auto-top -rtsopts -threaded -rtsopts -Odph -fno-liberate-case -funfolding-use-threshold100 -funfolding-keeness-factor100 -feager-blackholing
Library
  Hs-Source-Dirs:      ./src/
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
  build-depends:       base >=4.5 && <5, cmdargs, blastxml>=0.3.2, bytestring, vector, attoparsec
  Exposed-Modules:     TabularBlastParser