Name:                transalign
Version:             0.1
Synopsis:            Annotate genes by transitive alignment
Description:         
Homepage:            
License:             GPL
Author:              Ketil Malde
Maintainer:          ketil@malde.org
Stability:           Experimental
Category:            Bioinformatics
Build-type:          Simple
Cabal-version:       >=1.10.0

library
  build-depends: base   >= 4.7
               , attoparsec
               , binary
               , biocore
               , blastxml
               , bytestring
               , cassava
               , containers
               , deepseq
               , directory
               , filepath
               , hashable
               , judy == 0.2.3
               , parallel
               , parallel-io >= 0.3.3
               , split
               , unordered-containers
               , vector
               , vector-algorithms
               , vector-th-unbox
               , lz4    >= 0.2
               , cereal >= 0.5

  exposed-modules:
    Transalign.Align
    Transalign.Blast
    Transalign.BlastCache
    Transalign.Output
    Transalign.TabularBlastParser
  default-extensions: BangPatterns
                    , OverloadedStrings
  default-language:
    Haskell2010
  ghc-options:
    -O2 -funbox-strict-fields

executable transalign
  main-is:        TransAlign.hs
  other-modules:
    Options
  hs-source-dirs: src

  build-depends: base >= 4.7
               , cmdargs
               , parallel
               , directory
               , containers
               , bytestring
               --
               , transalign

  ghc-options:
    -rtsopts
    -threaded
    -O2
    -fno-liberate-case
    -funfolding-use-threshold100
    -funfolding-keeness-factor100
    -feager-blackholing

executable blastextract
  main-is:        BlastExtract.hs
  hs-source-dirs: src

  build-depends: base >= 4.7
               --
               , transalign
  ghc-options:
    -rtsopts
    -O2
    -threaded
    -feager-blackholing

executable showcache
  main-is:        ShowCache.hs
  hs-source-dirs: src

  build-depends: base >= 4.7
               , filepath
               , bytestring
               --
               , transalign
  ghc-options:
    -rtsopts
    -O2
    -threaded
    -feager-blackholing

--Library
--  Hs-Source-Dirs:      ./src/
--  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
--  build-depends:       base >=4.5 && <5, cmdargs, blastxml>=0.3.2, bytestring, vector, attoparsec, directory
--  Exposed-Modules:     TabularBlastParser
